--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libkolme (1.0.1-1) stable; urgency=medium
+
+  * updating for ci
+
+ -- Ivan Gagis <igagis@gmail.com>  Fri, 06 Nov 2015 18:36:33 +0200
+
 libkolme (1.0.0-1) stable; urgency=low
 
   * Initial release
