--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libkolme (1.0.4) stable; urgency=medium
+
+  * nuget fix
+
+ -- Ivan Gagis <igagis@gmail.com>  Tue, 16 Feb 2016 17:19:40 +0200
+
 libkolme (1.0.3) stable; urgency=medium
 
   * homebrew do not remove tests, as there are no tests
