--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libkolme (1.0.6) unstable; urgency=medium
+
+  * bintray version fix
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 29 Jun 2016 18:08:19 +0300
+
 libkolme (1.0.5) stable; urgency=medium
 
   * Rectangle::leftTop() and Rectangle::rightBottom() methods added
