--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libkolme (1.0.7) unstable; urgency=medium
+
+  * deploy to rasp
+
+ -- Ivan Gagis <igagis@gmail.com>  Fri, 02 Sep 2016 11:35:21 +0300
+
 libkolme (1.0.6) unstable; urgency=medium
 
   * bintray version fix
