--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libkolme (1.0.8) unstable; urgency=medium
+
+  * deploy to debian, ubuntu, raspberry
+
+ -- Ivan Gagis <igagis@gmail.com>  Fri, 16 Sep 2016 00:55:33 +0300
+
 libkolme (1.0.7) unstable; urgency=medium
 
   * deploy to rasp
