--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libkolme (1.0.10) unstable; urgency=medium
+
+  * deploy to android
+
+ -- Ivan Gagis <igagis@gmail.com>  Fri, 28 Apr 2017 15:46:29 +0300
+
 libkolme (1.0.9) unstable; urgency=medium
 
   * deploy to android
