--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libkolme (1.0.11) unstable; urgency=medium
+
+  * deploy to cygwin
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 10 May 2017 11:54:45 +0300
+
 libkolme (1.0.10) unstable; urgency=medium
 
   * deploy to android
