--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libkolme (1.0.12) unstable; urgency=medium
+
+  * updating git access token
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 10 May 2017 13:00:15 +0300
+
 libkolme (1.0.11) unstable; urgency=medium
 
   * deploy to cygwin
