--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libkolme (1.0.13) unstable; urgency=medium
+
+  * msys deployment
+
+ -- Ivan Gagis <igagis@gmail.com>  Sat, 05 Jan 2019 16:46:14 +0200
+
 libkolme (1.0.12) unstable; urgency=medium
 
   * updating git access token
