--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.15) unstable; urgency=medium
+
+  * first release after renaming to r4
+
+ -- Ivan Gagis <igagis@gmail.com>  Fri, 01 Nov 2019 17:16:59 +0200
+
 libr4 (1.0.14) unstable; urgency=medium
 
   * deploy to bionic
