--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.17) unstable; urgency=medium
+
+  * typedefs naming corrected
+
+ -- Ivan Gagis <igagis@gmail.com>  Fri, 01 Nov 2019 23:50:18 +0200
+
 libr4 (1.0.16) unstable; urgency=medium
 
   * Vector4 renamed to vector4
