--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.19) unstable; urgency=medium
+
+  * naming convention changed
+
+ -- Ivan Gagis <igagis@gmail.com>  Fri, 28 Feb 2020 16:02:25 +0200
+
 libr4 (1.0.18) unstable; urgency=medium
 
   * debian buster
