--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.21) unstable; urgency=medium
+
+  * deploy to rasbian buster
+
+ -- Ivan Gagis <igagis@gmail.com>  Fri, 14 Aug 2020 16:59:28 +0300
+
 libr4 (1.0.20) unstable; urgency=medium
 
   * use android native bundle plugin
