--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.22) unstable; urgency=medium
+
+  * row-major matrix memory order
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 13 Sep 2020 16:38:51 +0300
+
 libr4 (1.0.21) unstable; urgency=medium
 
   * deploy to rasbian buster
