--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.23) unstable; urgency=medium
+
+  * add matrix2
+
+ -- Ivan Gagis <igagis@gmail.com>  Mon, 14 Sep 2020 19:07:42 +0300
+
 libr4 (1.0.22) unstable; urgency=medium
 
   * row-major matrix memory order
