--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.24) unstable; urgency=medium
+
+  * package namings unified
+
+ -- Ivan Gagis <igagis@gmail.com>  Tue, 15 Sep 2020 15:06:37 +0300
+
 libr4 (1.0.23) unstable; urgency=medium
 
   * add matrix2
