--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.26) unstable; urgency=medium
+
+  * add rectangle::unite()
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 16 Sep 2020 14:41:04 +0300
+
 libr4 (1.0.25) unstable; urgency=medium
 
   * add vectorX::min/max() functions
