--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.28) unstable; urgency=medium
+
+  * remove default typedefs
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 16 Sep 2020 17:17:55 +0300
+
 libr4 (1.0.27) unstable; urgency=medium
 
   * add r4::round/ceil/floor(vector2)
