--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.29) unstable; urgency=medium
+
+  * add vector2::operator+(num)
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 16 Sep 2020 19:04:55 +0300
+
 libr4 (1.0.28) unstable; urgency=medium
 
   * remove default typedefs
