--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.30) unstable; urgency=medium
+
+  * rectangle::intersect(rectangle) fix for unsigned types
+
+ -- Ivan Gagis <igagis@gmail.com>  Thu, 17 Sep 2020 14:29:04 +0300
+
 libr4 (1.0.29) unstable; urgency=medium
 
   * add vector2::operator+(num)
