--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.31) unstable; urgency=medium
+
+  * add comp_mul and comp_div functions to all vectors
+
+ -- Ivan Gagis <igagis@gmail.com>  Fri, 25 Sep 2020 22:55:09 +0300
+
 libr4 (1.0.30) unstable; urgency=medium
 
   * rectangle::intersect(rectangle) fix for unsigned types
