--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.33) unstable; urgency=medium
+
+  * matrix2::scale() bugfix
+
+ -- Ivan Gagis <igagis@gmail.com>  Thu, 08 Oct 2020 02:07:55 +0300
+
 libr4 (1.0.32) unstable; urgency=medium
 
   * rename some rectangle methods
