--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.35) unstable; urgency=medium
+
+  * segment2
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 11 Oct 2020 02:05:02 +0300
+
 libr4 (1.0.34) unstable; urgency=medium
 
   * matrix2,3,4 inversion
