--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.36) unstable; urgency=medium
+
+  * fix segment2
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 11 Oct 2020 02:34:30 +0300
+
 libr4 (1.0.35) unstable; urgency=medium
 
   * segment2
