--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.37) unstable; urgency=medium
+
+  * fix index argument type
+
+ -- Ivan Gagis <igagis@gmail.com>  Thu, 15 Oct 2020 22:01:11 +0300
+
 libr4 (1.0.36) unstable; urgency=medium
 
   * fix segment2
