--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.40) unstable; urgency=medium
+
+  * build for ubuntu focal
+
+ -- Ivan Gagis <igagis@gmail.com>  Tue, 15 Dec 2020 01:00:19 +0200
+
 libr4 (1.0.39) unstable; urgency=medium
 
   * github actions
