--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.42) unstable; urgency=medium
+
+  * add vectorX::set(xyzw) method
+
+ -- Ivan Gagis <igagis@gmail.com>  Thu, 28 Jan 2021 16:19:52 +0200
+
 libr4 (1.0.41) unstable; urgency=medium
 
   * github actions build for raspbain
