--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.44) unstable; urgency=medium
+
+  * refactoring
+
+ -- Ivan Gagis <igagis@gmail.com>  Sat, 30 Jan 2021 20:27:34 +0200
+
 libr4 (1.0.43) unstable; urgency=medium
 
   * build fix
