--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.45) unstable; urgency=medium
+
+  * make variadic template constructors explicit
+
+ -- Ivan Gagis <igagis@gmail.com>  Sat, 30 Jan 2021 22:02:50 +0200
+
 libr4 (1.0.44) unstable; urgency=medium
 
   * refactoring
