--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.46) unstable; urgency=medium
+
+  * fix vector::set(A... a)
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 31 Jan 2021 01:02:30 +0200
+
 libr4 (1.0.45) unstable; urgency=medium
 
   * make variadic template constructors explicit
