--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.47) unstable; urgency=medium
+
+  * add check of initialiser_list size
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 31 Jan 2021 16:26:22 +0200
+
 libr4 (1.0.46) unstable; urgency=medium
 
   * fix vector::set(A... a)
