--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.48) unstable; urgency=medium
+
+  * disable varargs constructors for non-matching arguments number
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 31 Jan 2021 17:41:58 +0200
+
 libr4 (1.0.47) unstable; urgency=medium
 
   * add check of initialiser_list size
