--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.50) unstable; urgency=medium
+
+  * add matrix::frustum()
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 31 Jan 2021 19:18:09 +0200
+
 libr4 (1.0.49) unstable; urgency=medium
 
   * rectangle stream output operator improved
