--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.51) unstable; urgency=medium
+
+  * update dependency versions
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 10 Feb 2021 13:48:59 +0200
+
 libr4 (1.0.50) unstable; urgency=medium
 
   * add matrix::frustum()
