--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.53) unstable; urgency=medium
+
+  * deploy to jfrog
+
+ -- Ivan Gagis <igagis@gmail.com>  Fri, 09 Apr 2021 00:52:06 +0300
+
 libr4 (1.0.52) unstable; urgency=medium
 
   * matrix::tpos()
