--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.54) unstable; urgency=medium
+
+  * deploy to conan
+
+ -- Ivan Gagis <igagis@gmail.com>  Tue, 20 Apr 2021 00:47:40 +0300
+
 libr4 (1.0.53) unstable; urgency=medium
 
   * deploy to jfrog
