--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.55) unstable; urgency=medium
+
+  * remove multi-line comment
+
+ -- Ivan Gagis <igagis@gmail.com>  Tue, 20 Apr 2021 01:08:26 +0300
+
 libr4 (1.0.54) unstable; urgency=medium
 
   * deploy to conan
