--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.56) unstable; urgency=medium
+
+  * add vector::is_not_zero()
+
+ -- Ivan Gagis <igagis@gmail.com>  Thu, 20 May 2021 23:47:52 +0300
+
 libr4 (1.0.55) unstable; urgency=medium
 
   * remove multi-line comment
