--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.57) unstable; urgency=medium
+
+  * deploy to own repo
+
+ -- Ivan Gagis <igagis@gmail.com>  Tue, 20 Jul 2021 19:38:32 +0300
+
 libr4 (1.0.56) unstable; urgency=medium
 
   * add vector::is_not_zero()
