--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.64) unstable; urgency=medium
+
+  * build conan for different macos versions
+
+ -- Ivan Gagis <igagis@gmail.com>  Fri, 17 Dec 2021 00:55:18 +0200
+
 libr4 (1.0.63) unstable; urgency=medium
 
   * build for raspbian buster
