--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.65) unstable; urgency=medium
+
+  * test release
+
+ -- Ivan Gagis <igagis@gmail.com>  Thu, 28 Apr 2022 21:13:05 +0300
+
 libr4 (1.0.64) unstable; urgency=medium
 
   * build conan for different macos versions
