--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.68) unstable; urgency=medium
+
+  * build for ubuntu jammy
+
+ -- Ivan Gagis <igagis@gmail.com>  Mon, 24 Oct 2022 21:45:51 +0300
+
 libr4 (1.0.67) unstable; urgency=medium
 
   * use utki::assert()
