--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.69) unstable; urgency=medium
+
+  * undef assert macro
+
+ -- Ivan Gagis <igagis@gmail.com>  Thu, 27 Oct 2022 00:15:40 +0300
+
 libr4 (1.0.68) unstable; urgency=medium
 
   * build for ubuntu jammy
