--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.71) unstable; urgency=medium
+
+  * fix lint issues
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 15 Feb 2023 13:29:29 +0200
+
 libr4 (1.0.70) unstable; urgency=medium
 
   * msvs: build v143 configs
