--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.74) unstable; urgency=medium
+
+  * add vector::comp_op()
+
+ -- Ivan Gagis <igagis@gmail.com>  Tue, 06 Jun 2023 17:49:05 +0300
+
 libr4 (1.0.73) unstable; urgency=medium
 
   * conan: no link to -lr4
