--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.75) unstable; urgency=medium
+
+  * fix lint issues
+
+ -- Ivan Gagis <igagis@gmail.com>  Sat, 17 Jun 2023 22:59:06 +0300
+
 libr4 (1.0.74) unstable; urgency=medium
 
   * add vector::comp_op()
