--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.76) unstable; urgency=medium
+
+  * archlinux: deploy
+
+ -- Ivan Gagis <igagis@gmail.com>  Mon, 28 Aug 2023 19:09:03 +0300
+
 libr4 (1.0.75) unstable; urgency=medium
 
   * fix lint issues
