--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.78) unstable; urgency=medium
+
+  * add matrix::perspective()
+
+ -- Ivan Gagis <igagis@gmail.com>  Tue, 31 Oct 2023 10:17:19 +0200
+
 libr4 (1.0.77) unstable; urgency=medium
 
   * add 2d cross product
