--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.79) unstable; urgency=medium
+
+  * add rectangle::contains()
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 01 Nov 2023 21:52:05 +0200
+
 libr4 (1.0.78) unstable; urgency=medium
 
   * add matrix::perspective()
