--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.80) unstable; urgency=medium
+
+  * aptian
+
+ -- Ivan Gagis <igagis@gmail.com>  Thu, 29 Feb 2024 15:56:59 +0200
+
 libr4 (1.0.79) unstable; urgency=medium
 
   * add rectangle::contains()
