--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.81) unstable; urgency=medium
+
+  * doxygen comment fix
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 03 Mar 2024 13:47:06 +0200
+
 libr4 (1.0.80) unstable; urgency=medium
 
   * aptian
