--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.84) unstable; urgency=medium
+
+  * add matrix::look_at() and matrix::perspective(fov)
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 28 Apr 2024 20:13:03 +0300
+
 libr4 (1.0.83) unstable; urgency=medium
 
   * add rectangle::rectangle(segment2)
