--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.86) unstable; urgency=medium
+
+  * fix homebrew formulae
+
+ -- Ivan Gagis <igagis@gmail.com>  Mon, 29 Apr 2024 22:45:28 +0300
+
 libr4 (1.0.85) unstable; urgency=medium
 
   * add new methods to matrix
