--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.91) unstable; urgency=medium
+
+  * enable quaternion({}) constructor
+
+ -- Ivan Gagis <igagis@gmail.com>  Mon, 08 Jul 2024 23:16:44 +0300
+
 libr4 (1.0.90) unstable; urgency=medium
 
   * add matrix::submatrix(), add quaternion(vector4)
