--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.92) unstable; urgency=medium
+
+  * fix vector::set() overload selection
+
+ -- Ivan Gagis <igagis@gmail.com>  Sat, 31 Aug 2024 14:47:45 +0300
+
 libr4 (1.0.91) unstable; urgency=medium
 
   * enable quaternion({}) constructor
