--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.93) unstable; urgency=medium
+
+  * improve vector::operator<< for uint8_t type
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 30 Oct 2024 11:43:25 +0200
+
 libr4 (1.0.92) unstable; urgency=medium
 
   * fix vector::set() overload selection
