--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.94) unstable; urgency=medium
+
+  * add rectangle::intersection() and rectangle::union_rect()
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 06 Nov 2024 15:41:47 +0200
+
 libr4 (1.0.93) unstable; urgency=medium
 
   * improve vector::operator<< for uint8_t type
