--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.95) unstable; urgency=medium
+
+  * add vector::dot()
+
+ -- Ivan Gagis <igagis@gmail.com>  Tue, 12 Nov 2024 16:51:03 +0200
+
 libr4 (1.0.94) unstable; urgency=medium
 
   * add rectangle::intersection() and rectangle::union_rect()
