--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.100) unstable; urgency=medium
+
+  * conan: wasm
+
+ -- Ivan Gagis <igagis@gmail.com>  Mon, 27 Jan 2025 23:07:38 +0200
+
 libr4 (1.0.99) unstable; urgency=medium
 
   * conan: macos
