--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.102) unstable; urgency=medium
+
+  * constexpr
+
+ -- Ivan Gagis <igagis@gmail.com>  Mon, 31 Mar 2025 12:29:25 +0300
+
 libr4 (1.0.101) unstable; urgency=medium
 
   * improve vector::comp_op
