--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libr4 (1.0.104) unstable; urgency=medium
+
+  * cmake: config transient deps
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 08 Jun 2025 14:20:18 +0300
+
 libr4 (1.0.103) unstable; urgency=medium
 
   * cmake: myci
