--- a/README.adoc
+++ b/README.adoc
@@ -6,4 +6,4 @@
 | link:https://github.com/cppfw/{name}/releases[image:https://img.shields.io/github/tag/cppfw/{name}.svg[releases]] | link:https://github.com/cppfw/{name}/actions[image:https://github.com/cppfw/{name}/workflows/ci/badge.svg[ci status]] | link:https://codecov.io/gh/cppfw/r4[image:https://codecov.io/gh/cppfw/r4/branch/main/graph/badge.svg?token=LKA3SRSkc3[codecov.io]]
 |====
 
-link:wiki/Main.adoc[WiKi]
+link:wiki/main.adoc[WiKi]
